# aiida-crystal-dft

./: .gitignore  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  conftest.py  pylintrc  pyproject.toml  requirements.txt  setup.json  setup.py  sonar-project.properties
.github/workflows/: codeql.yml  python-ci.yml
aiida_crystal/: __init__.py  aiida_compatibility.py  utils.py
aiida_crystal/calculations/: __init__.py  common.py  cry_basic.py  cry_main.py  cry_main_immigrant.py  parallel.py  properties.py  serial.py
aiida_crystal/calculations/tests/: test_cry_basic.py  test_cry_main.py  test_cry_main_immigrant.py  test_crystal_calc.py  test_properties_calc.py
aiida_crystal/cli/: basis.py  basis_set.py  structsettings.py
aiida_crystal/cli/tests/: test_cmnds.py
aiida_crystal/data/: basis.py  basis_family.py  basis_set.py  struct_settings.py
aiida_crystal/data/tests/: test_basis.py  test_basis_data.py  test_basis_family.py  test_structsettings_data.py
aiida_crystal/io/: basis.py  d12.py  d12.schema  d12_read.py  d12_write.py  d3.py  f25.py  f34.py  f9.py  geometry.py  out.py  parsers.py
aiida_crystal/io/pycrystal/: out.py
aiida_crystal/io/tests/: test_d12.py  test_d12_read.py  test_d12_write.py  test_d3.py  test_f25.py  test_f34.py  test_f9.py  test_out_pycrystal.py  test_parsers.py
aiida_crystal/parsers/: cry_basic.py  cry_pycrystal.py  geometry.py  inputd12_read.py  inputd12_write.py  migrate.py  properties.py
aiida_crystal/parsers/tests/: test_crystal.py  test_inputd12_read.py  test_inputd12_write.py  test_parse_geometry.py  test_properties.py
aiida_crystal/schemas/jinja/: __init__.py  geometry_phonons.j2  macros.j2
aiida_crystal/schemas/tests/: test_schema_d3.py
aiida_crystal/tests/: __init__.py  test_migrate.py  test_workflow_immigrant.py  utils.py
aiida_crystal/utils/: __init__.py  data.py  electrons.py  geometry.py  keywords.py  kpoints.py
aiida_crystal/validation/: d12.schema.json  d3.schema.json
aiida_crystal/workflows/: base.py  cry_main_immigrant.py  runcry.py  symmetrise_3d_struct.py
aiida_crystal_dft/: __init__.py
aiida_crystal_dft/calculations/: __init__.py  common.py  parallel.py  properties.py  serial.py
aiida_crystal_dft/cli/: basis.py  options.py
aiida_crystal_dft/data/: __init__.py  basis.py  basis_family.py
aiida_crystal_dft/io/: __init__.py  basis.py  d12.py  d12_write.py  d3.py  f25.py  f34.py  f9.py  out.py  parsers.py
aiida_crystal_dft/parsers/: __init__.py  cry_pycrystal.py  crystal.py  properties.py
aiida_crystal_dft/schemas/: __init__.py
aiida_crystal_dft/tests/: __init__.py  utils.py
aiida_crystal_dft/utils/: __init__.py  dos.py  electrons.py  geometry.py  kpoints.py
aiida_crystal_dft/validation/: __init__.py  d12.schema.json  d3.schema.json
aiida_crystal_dft/workflows/: base.py  runcry.py
examples/: K_binary.py  MgO_MPDS.py  MgO_MPDS.yml  MgO_bands.py  MgO_props_WC.py  MgO_runcry_WC.py  d12.py  test_KMnF3.py  test_MPDS.py  test_MgO.py  test_MgO_MPDS.py  test_MgO_bands.py  test_MgO_base_WC.py  test_MgO_props_WC.py  test_MgO_runcry_WC.py  test_NiO_AF.py
examples/io/: d12.py
(+88 files in other folders)
